--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.4.0
+  firebase_auth: ^4.2.3
+  firebase_ui_auth: ^1.1.5
 
 dev_dependencies:
   flutter_test:
