--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.4.0
   firebase_auth: ^4.2.3
   firebase_ui_auth: ^1.1.5
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
